--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sparticuz/chromium-min": "^129.0.0",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "puppeteer": "^23.5.1",
