--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sparticuz/chromium": "^129.0.0",
     "@sparticuz/chromium-min": "^129.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "puppeteer": "^23.5.1",
