--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "puppeteer": "^23.5.1",
-    "puppeteer-core": "^23.5.2"
+    "puppeteer": "^23.5.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
