--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -19,4 +19,4 @@ RUN npm ci
 COPY . .
 
 # Start xvfb and run the application
-CMD ["ts-node" , "src/index.ts"]
+CMD xvfb-run --auto-servernum --server-args="-screen 0 1280x1024x24" ts-node src/index.ts
