--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,13 +1,13 @@
 FROM ghcr.io/puppeteer/puppeteer:23.5.1
 
 # USER root
-
 # RUN apt-get update && \
 #     apt-get install -y xvfb
 
-# USER node
+# Install ts-node globally if not in package.json
+RUN npm install -g ts-node
 
-# ENV DISPLAY=:99
+USER node
 
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
     PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
@@ -19,5 +19,35 @@ RUN npm ci
 COPY . .
 
 # Start xvfb and run the application
-# CMD xvfb-run --auto-servernum --server-args="-screen 0 1280x1024x24" ts-node src/index.ts
-CMD ts-node src/index.ts
+CMD xvfb-run --auto-servernum --server-args="-screen 0 1280x1024x24" ts-node src/index.ts
+
+
+
+
+
+
+
+
+# FROM ghcr.io/puppeteer/puppeteer:23.5.1
+
+# # USER root
+
+# # RUN apt-get update && \
+# #     apt-get install -y xvfb
+
+# # USER node
+
+# # ENV DISPLAY=:99
+
+# ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+#     PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
+
+# WORKDIR /usr/src/app
+
+# COPY package*.json ./
+# RUN npm ci
+# COPY . .
+
+# # Start xvfb and run the application
+# # CMD xvfb-run --auto-servernum --server-args="-screen 0 1280x1024x24" ts-node src/index.ts
+# # CMD ts-node src/index.ts
