--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -5,7 +5,7 @@ FROM ghcr.io/puppeteer/puppeteer:23.5.1
 #     apt-get install -y xvfb
 
 # Install ts-node globally if not in package.json
-RUN npm install -g ts-node
+# RUN npm install -g ts-node
 
 USER node
 
