--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,8 +1,8 @@
 FROM ghcr.io/puppeteer/puppeteer:23.5.1
 
-# USER root
-# RUN apt-get update && \
-#     apt-get install -y xvfb
+USER root
+RUN apt-get update && \
+    apt-get install -y xvfb
 
 # Install ts-node globally if not in package.json
 # RUN npm install -g ts-node
