--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -5,7 +5,7 @@ RUN apt-get update && \
     apt-get install -y xvfb
 
 # Install ts-node globally if not in package.json
-# RUN npm install -g ts-node
+RUN npm install -g ts-node
 
 USER node
 
